cambio texto imagen 3

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <img src="./assets/img/cupon-3.jpg" class="card-img-top" alt="sillondentista">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
-      <p class="card-text">Evaluación integral + blanqueamiento dental led + limpieza + fluoración.</p>
+      <p class="card-text">Evaluación integral + blanqueamiento dental led + limpieza + fluoración, garantía por 6 meses.</p>
       <p class="card-text">Clínica Dental Quijada</p>
       <p class="card-text"><i class="fa-solid fa-location-dot"></i>1342, Blanco Encalada, Chile.</p>
       <div class="justify-content-end d-flex">
